<resources>
    <string name="app_name">CutAndPasteImage</string>
    <string name="paste">Paste</string>
    <string name="cut">Cut</string>
    <string name="save">My work</string>
    <string name="cut_to_shape">Cut into shape</string>
    <string name="cut_to_point">Draw cut</string>
    <string name="guide">Guide</string>
    <string name="load_image_fail">Load Image Fail !</string>
    <string name="cut_successfully">Cut photo successfully!</string>
    <string name="paste_photo">Paste this photo into</string>
    <string name="background">Background</string>
    <string name="your_image">Your Image</string>
    <string name="save_fail">Save Photo Fail!</string>
    <string name="save_success">Save photo successfully!</string>
    <string name="save_to">Save to: </string>
    <string name="please_choose_image">Please choose an image!</string>
    <string name="edit">Edit</string>
    <string name="style">Style</string>
    <string name="fun">Fun</string>
    <string name="luxury">Luxury</string>
    <string name="trend">Trend</string>
    <string name="romance">Romance</string>
    <string name="do_yout_want_exit_editor">Do you want exit editor?</string>
    <string name="please_cut_image">Yout must cut image before save it!</string>
    <string name="share">Share</string>
    <string name="no_photo">You have no photo yet!</string>
    <string name="notifi">Notification</string>
    <string name="privacy">Privacy Policy</string>
    <string name="update">Check for update</string>
    <string name="share_app">Share app</string>
    <string name="rate">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="please_choose_your_image">Please choose your image to paste!</string>
    <string name="please_choose_background">Please choose a background!</string>
    <string name="cut_new_photo">Cut new</string>
    <string name="theme">Themes</string>
    <string name="paste_cut_image">Cutted image</string>
    <string name="paste_uncut_image">Paste uncut image</string>
    <string name="photo">Photo</string>
    <string name="choose_background">Choose Background</string>
    <string name="preview">Preview</string>
    <string name="setting">Setting</string>
    <string name="step1">Step 1:</string>
    <string name="step1_content">if you want to crop the image, click on the cut icon on the screen</string>
    <string name="step2">Step 2:</string>
    <string name="step2_content">click the cut icon to cut a big area as you want</string>
    <string name="step3">step 3:</string>
    <string name="step3_content">select the shape you want to cut on the toolbar</string>
    <string name="step4">step 4:</string>
    <string name="step4_content">to draw as you like, click on the drawing icon to cut and customize the drawing size</string>
    <string name="step5">step 5:</string>
    <string name="step5_content">click cancel or redo if drawing is incorrect</string>
    <string name="step6">step 6:</string>
    <string name="step6_content">you have cropped the image successfully, now you can paste it into any context</string>
    <string name="step7">step 7:</string>
    <string name="step7_content">now you are done share with your friends</string>
    <string name="sponsor" translatable="false">Sponsored</string>
    <string name="please_wait">Please wait for a moment!</string>
    <string name="pls_wait">Please wait for a moment! \n (This action may contain ads)</string>

    <string name="no_ads">No ad available!</string>
    <string name="please_install">Please install this app first!</string>
    <string name="save_image">Saved Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_forder">All Image</string>
    <string name="easer">Easer</string>
    <string name="back">Back</string>
    <string name="saves">Save</string>
    <string name="auto">Auto cut</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="triangle">Triangle</string>
    <string name="hexagon">Hexagon</string>
    <string name="saveandshare">Save and Share</string>
    <string name="sizebrush">Size Brush</string>
    <string name="hardness">Hardness</string>
    <string name="saveasbg">Save as Background</string>
    <string name="saveimage">Save image</string>
    <string name="genarel">General</string>
    <string name="notification">Notification</string>
    <string name="other">Other</string>
    <string name="sharefriend">Share with friend</string>
    <string name="pasteto">Paste to background</string>
    <string name="notthing">Nothing here</string>
    <string name="lettry">You haven/’t edited anything yet.\n Let/’s give it a try</string>
    <string name="pastexxx">Paste</string>
    <string name="changebg">Change background</string>
    <string name="yourlibrary">Your library</string>
    <string name="thuvvien">Thư viện ảnh</string>
    <string name="choosebg">Chọn ảnh nền</string>
    <string name="chude">Chủ đề ảnh</string>
    <string name="anhcuaban">Ảnh của bạn</string>
    <string name="exit">Quay lại</string>
    <string name="ghep">Ghép ảnh</string>
    <string name="savess">Lưu Ảnh</string>
    <string name="anhdacat">Ảnh đã cắt</string>
    <string name="doihinh">Đổi ảnh nền</string>
    <string name="catmoi">Cắt ảnh mới</string>
</resources>