<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.cutandpasteimage.fragment.paste.PasteViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/llFeature"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rlNavigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:layout_width="0dp"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_cut_to_rectangle_yellow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvcutted"
                    android:text="@string/anhdacat"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/textSizeMain"
                    android:textColor="@color/main_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_image"
                    app:tint="@color/color_nau"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvChangeBG"
                    android:text="@string/doihinh"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/textSizeSmall"
                    android:textColor="@color/color_nau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_cut_new"
                    app:tint="@color/color_nau"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvcutNew"
                    android:text="@string/catmoi"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/textSizeSmall"
                    android:textColor="@color/color_nau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rlNavigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_black"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tvBack"
                android:text="@string/exit"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/textSizeSmall"
                android:textColor="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvGhepanh"
                android:text="@string/ghep"
                android:layout_centerInParent="true"
                android:textSize="@dimen/textSizeSmall"
                android:textColor="@color/color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvSave"
                android:text="@string/savess"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/textSizeSmall"
                android:textColor="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>